--- a/src/styles.css
+++ b/src/styles.css
@@ -58,7 +58,8 @@ a {
   flex-wrap: wrap;
   width: 100%;
   height: 6rem;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  border-bottom: 1px solid black;
 }
 
 /* .trending-img {
@@ -70,6 +71,8 @@ a {
   height: 3rem;
   display: flex;
   align-items: center;
+  margin-top: 0.6rem;
+  margin-bottom: 1rem;
 }
 
 .navbar-left {
@@ -84,8 +87,24 @@ a {
   font-size: 1rem;
 }
 
+.navbar-center {
+  position: relative;
+  left: 30%;
+}
+
 .searchbar {
   border: none;
   border-bottom: 1px black solid;
-  
+  width: 16rem;
+  text-align: center;
+  font-size: medium;
+  color: black;
+  outline: none;
+}
+
+.line {
+  border-bottom: 1px solid black;
+  background-color: color;
+  width: 100%;
+  margin-bottom: 1rem;
 }
