--- a/src/styles.css
+++ b/src/styles.css
@@ -406,7 +406,7 @@ input::file-selector-button {
 .button-edit {
   background: none;
   color: inherit;
-  width: 4rem;
+  width: 9rem;
   border: none;
   padding: 0;
   font: inherit;
@@ -421,3 +421,51 @@ input::file-selector-button {
   font-weight: 500;
   line-height: 2rem;
 }
+
+
+
+
+/* upload image */
+/* label,
+button {
+  font-size: 1.2rem;
+  color: #fff;
+  padding: 0.5em 0.9em;
+  cursor: pointer;
+  border: none;
+}
+[type="file"] {
+  display: none;
+}
+[class*="btn"] {
+  border-radius: 5px;
+  text-transform: capitalize;
+}
+
+.btn-grey {
+  background-color: #f2f2f2;
+  color: #333;
+  border: 1px solid #888;
+}
+.btn-green {
+  background-color: #63dd47;
+}
+
+code {
+  display: grid;
+  gap: 4px;
+  padding: 1rem;
+  background-color: #000;
+}
+
+.output-item {
+  display: flex;
+  gap: 0.4rem;
+  font-family: monospace;
+  font-size: 14px;
+  color: #fff;
+}
+.output-item > *:first-child {
+  font-weight: 800;
+  color: #6aab17;
+} */
